--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hbsfy": "^1.3.2",
     "minifyify": "^3.0.9",
     "pretty-hrtime": "^0.2.1",
+    "rimraf": "^2.2.8",
     "vinyl-source-stream": "^0.1.1",
     "watchify": "^0.10.2"
   },
