--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
     "jquery": "^1.11.1"
   },
   "devDependencies": {
+    "browser-sync": "^0.9.1",
     "browserify": "^4.1.9",
+    "connect-livereload": "^0.4.0",
+    "express": "^4.4.2",
     "gulp": "^3.7.0",
     "gulp-changed": "^0.4.0",
     "gulp-compass": "^1.1.9",
     "gulp-imagemin": "^0.6.0",
+    "gulp-livereload": "^2.1.0",
     "gulp-notify": "^1.3.1",
     "gulp-open": "^0.2.8",
     "gulp-util": "^2.2.16",
+    "gulp-watch": "^0.6.5",
     "handlebars": "^1.3.0",
     "hbsfy": "^1.3.2",
     "minifyify": "^3.0.9",
     "pretty-hrtime": "^0.2.1",
     "rimraf": "^2.2.8",
+    "tiny-lr": "0.0.7",
     "vinyl-source-stream": "^0.1.1",
     "watchify": "^0.10.2"
   },
