--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-changed": "^0.4.0",
     "gulp-compass": "^1.1.9",
     "gulp-imagemin": "^0.6.0",
+    "gulp-jshint": "^1.6.2",
     "gulp-livereload": "^2.1.0",
     "gulp-notify": "^1.3.1",
     "gulp-open": "^0.2.8",
@@ -24,6 +25,7 @@
     "gulp-watch": "^0.6.5",
     "handlebars": "^1.3.0",
     "hbsfy": "^1.3.2",
+    "jshint-stylish": "^0.2.0",
     "minifyify": "^3.0.9",
     "pretty-hrtime": "^0.2.1",
     "rimraf": "^2.2.8",
