--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "browserify": "^4.1.9",
+    "chai": "^1.9.1",
     "connect-livereload": "^0.4.0",
     "express": "^4.4.2",
     "gulp": "^3.8.0",
@@ -21,6 +22,7 @@
     "gulp-jshint": "^1.6.2",
     "gulp-livereload": "^2.1.0",
     "gulp-minify-css": "^0.3.4",
+    "gulp-mocha": "^0.4.1",
     "gulp-notify": "^1.3.1",
     "gulp-open": "^0.2.8",
     "gulp-sass": "^0.7.2",
